# QtPlayground

./: .gitignore  CMakeLists.txt  README.md
res/: RCa18160  icon.aps  icon.h  icon.rc  resources.qrc
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
